# ziply

./: .gitignore  LICENSE  PLAN.md  README.md  package-lock.json  package.json
.github/workflows/: build-installers.yml  ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src/app/: defaults.ts  types.ts  utils.ts
apps/desktop/src/components/: ActionBanner.tsx  AppIcons.tsx  AppSidebar.tsx  BatchQueuePanel.tsx  CompressForm.tsx  DropZonePanel.tsx  ExtractForm.tsx  HistoryScreen.tsx  LiveJobsPanel.tsx  OverviewPanels.tsx  RecentOperationsPanel.tsx  SettingsScreen.tsx  ShellIntegrationPanel.tsx  WorkspaceScreen.tsx
packaging/homebrew/Casks/: ziply.rb.template
packaging/homebrew/tap-skeleton/: README.md
scripts/: bootstrap-homebrew-tap.sh  build-apt-repo.sh  check-version-consistency.sh  generate-compat-fixtures.sh  publish-homebrew-tap.sh  render-homebrew-cask.sh  run-tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/macos-services/extract-here-with-ziply.workflow/Contents/: Info.plist  document.wflow  version.plist
src-tauri/resources/macos-services/extract-with-ziply.workflow/Contents/: Info.plist  document.wflow
src-tauri/src/: archive.rs  history.rs  lib.rs  main.rs  models.rs  shell.rs  test_fixtures.rs
src-tauri/src/commands/: archive.rs  metadata.rs  mod.rs  shell.rs
src-tauri/tests/fixtures/compat/: 7zz-cli-encrypted.7z  7zz-cli.7z  README.md  raw-bzip2.bz2  raw-xz.xz  tar-bsdtar.tar.bz2  tar-bsdtar.tar.xz  tar-cli.tar
(+16 files in other folders)
